<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/putih"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_regular"
        android:gravity="center"
        android:text="@string/welcome"
        android:textColor="@color/hitam"
        android:textSize="20sp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_logemail"
        android:backgroundTint="@color/merahBata"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:minHeight="50dp"
        android:textColorHint="@color/abuabu"
        app:hintTextAppearance="@color/abuabu">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edt_logemail"
            android:backgroundTint="@color/abuabu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:hint="@string/emailaddress"
            android:textColor="@color/hitam"
            android:visibility="visible" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_logpass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="30dp"
        android:textColorHint="@color/abuabu"
        app:hintTextAppearance="@color/abuabu">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edt_logpass"
            android:backgroundTint="@color/abuabu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:hint="@string/password"
            android:textColor="@color/hitam" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/tv_logforpass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/roboto_regular"
        android:gravity="center"
        android:text="@string/forgotpasslog"
        android:textColor="@color/textcolor" />

    <Button
        android:id="@+id/btn_log"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/btn_login"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/btnlog"
        android:textColor="@color/putih" />
</LinearLayout>