<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ClaimTrackIdNotFoundActivity">

    <LinearLayout
        android:id="@+id/claim_track_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/crimson">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/claimstatus"
            android:textAllCaps="false"
            android:textColor="@color/putih"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_whoops"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/claim_track_title"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/roboto_regular"
        android:gravity="center"
        android:text="@string/whoops"
        android:textColor="@color/hitam"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_try"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_whoops"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto_regular"
        android:gravity="center"
        android:text="@string/checkyourid"
        android:textSize="16sp" />

    <ImageView
        android:id="@+id/iv_try"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_try"
        android:layout_marginTop="56dp"
        android:src="@drawable/claim_id_not_found" />

    <Button
        android:textColor="@color/putih"
        android:fontFamily="@font/roboto_regular"
        android:textSize="16sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_try"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="87dp"
        android:background="@drawable/round_button"
        android:text="@string/tryaga"
        android:textAllCaps="false" />

</RelativeLayout>