<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/container_remin"
    android:layout_height="match_parent"
    android:background="@color/putih"
    tools:context=".Fragment.ReminderFragment"
    android:layout_marginTop="10dp"
    android:orientation="vertical">

    <TextView
        android:layout_marginTop="45dp"
        android:id="@+id/tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/nothing"
        android:textColor="@color/hitam"
        android:textSize="17sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv2"
        android:textColor="@color/tulisan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="20dp"
        android:layout_above="@+id/tv"
        android:text="@string/setreminder" />

        <ImageView
            android:id="@+id/illustration"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:src="@drawable/reminder_home_logo"
            />

        <Button
            android:id="@+id/btnsetnewreminder"
            android:layout_width="246dp"
            android:layout_height="65dp"
            android:layout_gravity="center"
            android:layout_marginTop="55dp"
            android:textSize="16sp"
            android:textColor="@color/colorWhite"
            android:backgroundTint="@color/merahBata"
            android:text="@string/addnewreminder"
            android:textAllCaps="false" />


</LinearLayout>