<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.HomeFragment">

    <!-- TODO: Update blank fragment layout -->



    <ImageView
        android:id="@+id/illustration"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_below="@id/premireminder"
        android:layout_centerHorizontal="true"
        android:layout_marginVertical="171dp"
        android:src="@drawable/on_board_explore"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="74dp"
        android:orientation="vertical"
        android:padding="0dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/havent"
            android:textColor="@color/hitam"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/txtregister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:text="@string/register"
                android:textColor="@color/tulisan"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:text="@string/live"
                android:textColor="@color/tulisan"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>